spade-tests/src/snapshots/spade_tests__hir_lowering__tests__refering_to_unavailable_variable_causes_erro.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Use of x before it is ready
  ┌─ testinput:6:19
  │
6 │         let res = x;
  │                   ^ not ready for another 4 stages


